Custom control alignment

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1318,6 +1318,122 @@ Showing a <kbd>kdb sample</kbd>
   <input type="url" class="form-control" id="inputNative2" placeholder="http://">
 </div>
 
+<h3>Custom Forms: Checkbox</h3>
+<div class="margin-b-1">
+  <label class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input">
+    <span class="custom-control-indicator"></span>
+    <span class="custom-control-description">Check this custom checkbox</span>
+  </label>
+</div>
+
+<div class="margin-b-1">
+  <label class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input">
+    <span class="custom-control-indicator"></span>
+    <span class="custom-control-description">Curabitur vel pulvinar arcu? Donec commodo iaculis varius. In malesuada volutpat magna nec blandit. Quisque sit amet nisl scelerisque, tristique odio at, dignissim quam. Aenean molestie imperdiet nisi. Vestibulum mattis posuere dui a luctus. Cras suscipit urna et pulvinar dapibus. Cras efficitur aliquet mi ut cursus.</span>
+  </label>
+</div>
+
+<h3>Custom Forms: Radio</h3>
+<div class="margin-b-1">
+  <label class="custom-control custom-radio">
+    <input id="radio1" name="radio" type="radio" class="custom-control-input">
+    <span class="custom-control-indicator"></span>
+    <span class="custom-control-description">Toggle this custom radio</span>
+  </label>
+  <label class="custom-control custom-radio">
+    <input id="radio2" name="radio" type="radio" class="custom-control-input">
+    <span class="custom-control-indicator"></span>
+    <span class="custom-control-description">Or toggle this other custom radio</span>
+  </label>
+</div>
+
+<h3>Custom Forms: Disabled</h3>
+<div class="margin-b-1">
+  <label class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" disabled>
+    <span class="custom-control-indicator"></span>
+    <span class="custom-control-description">Check this custom checkbox</span>
+  </label>
+  <label class="custom-control custom-radio">
+    <input id="radio3" name="radioDisabled" type="radio" class="custom-control-input" disabled>
+    <span class="custom-control-indicator"></span>
+    <span class="custom-control-description">Toggle this custom radio</span>
+  </label>
+  <label class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" disabled>
+    <span class="custom-control-indicator"></span>
+    <span class="custom-control-description">Check this custom checkbox</span>
+  </label>
+  <label class="custom-control custom-radio">
+    <input id="radio3" name="radioDisabled" type="radio" class="custom-control-input" disabled>
+    <span class="custom-control-indicator"></span>
+    <span class="custom-control-description">Toggle this custom radio</span>
+  </label>
+  <label class="custom-control custom-checkbox">
+    <input type="checkbox" class="custom-control-input" disabled>
+    <span class="custom-control-indicator"></span>
+    <span class="custom-control-description">Check this custom checkbox</span>
+  </label>
+  <label class="custom-control custom-radio">
+    <input id="radio3" name="radioDisabled" type="radio" class="custom-control-input" disabled>
+    <span class="custom-control-indicator"></span>
+    <span class="custom-control-description">Toggle this custom radio</span>
+  </label>
+</div>
+
+<h3>Custom Forms: Stacked</h3>
+<div class="custom-controls-stacked margin-b-1">
+  <label class="custom-control custom-radio">
+    <input id="radioStacked1" name="radio-stacked" type="radio" class="custom-control-input">
+    <span class="custom-control-indicator"></span>
+    <span class="custom-control-description">Toggle this custom radio</span>
+  </label>
+  <label class="custom-control custom-radio">
+    <input id="radioStacked2" name="radio-stacked" type="radio" class="custom-control-input">
+    <span class="custom-control-indicator"></span>
+    <span class="custom-control-description">Or toggle this other custom radio</span>
+  </label>
+</div>
+
+<div class="custom-controls-stacked margin-b-1">
+  <label class="custom-control custom-radio">
+    <input id="checkStacked1" type="checkbox" class="custom-control-input">
+    <span class="custom-control-indicator"></span>
+    <span class="custom-control-description">Curabitur vel pulvinar arcu? Donec commodo iaculis varius. In malesuada volutpat magna nec blandit. Quisque sit amet nisl scelerisque, tristique odio at, dignissim quam. Aenean molestie imperdiet nisi. Vestibulum mattis posuere dui a luctus. Cras suscipit urna et pulvinar dapibus. Cras efficitur aliquet mi ut cursus.</span>
+  </label>
+  <label class="custom-control custom-radio">
+    <input id="checkStacked2" type="checkbox" class="custom-control-input">
+    <span class="custom-control-indicator"></span>
+    <span class="custom-control-description">Curabitur vel pulvinar arcu? Donec commodo iaculis varius. In malesuada volutpat magna nec blandit. Quisque sit amet nisl scelerisque, tristique odio at, dignissim quam. Aenean molestie imperdiet nisi. Vestibulum mattis posuere dui a luctus. Cras suscipit urna et pulvinar dapibus. Cras efficitur aliquet mi ut cursus.</span>
+  </label>
+</div>
+
+
+<h3>Custom Forms: Select Menu</h3>
+<div class="margin-b-1">
+  <select class="custom-select">
+    <option selected>Open this select menu</option>
+    <option value="1">One</option>
+    <option value="2">Two</option>
+    <option value="3">Three</option>
+  </select>
+</div>
+
+<h3>Custom Forms: Color Picker</h3>
+<div class="margin-b-1">
+  <input class="custom-color" type="color" value="#117dba" id="color">
+</div>
+
+<h3>Custom Forms: File Browser</h3>
+<div class="margin-b-1">
+  <label class="custom-file">
+    <input type="file" id="file" class="custom-file-input">
+    <span class="custom-file-control"></span>
+  </label>
+</div>
+
 <h3>Base buttons</h3>
 <p>
 <button type="button" class="btn">Default</button>
