Tags: Outline variant

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -2891,26 +2891,48 @@ Anchor variants:<br />
 <h3>Tags contextual</h3>
 <span class="tag">Default</span>
 <span class="tag tag-primary">Primary</span>
+<span class="tag tag-secondary">Secondary</span>
 <span class="tag tag-success">Success</span>
 <span class="tag tag-info">Info</span>
 <span class="tag tag-warning">Warning</span>
 <span class="tag tag-danger">Danger</span>
 
+<h3>Tags anchors</h3>
+<a href="#" class="tag">Default</a>
+<a href="#"  class="tag tag-primary">Primary</a>
+<a href="#"  class="tag tag-secondary">Secondary</a>
+<a href="#"  class="tag tag-success">Success</a>
+<a href="#"  class="tag tag-info">Info</a>
+<a href="#"  class="tag tag-warning">Warning</a>
+<a href="#"  class="tag tag-danger">Danger</a>
+
 <h3>Tag pills</h3>
 <span class="tag tag-pill">Default</span>
 <span class="tag tag-pill tag-primary">Primary</span>
+<span class="tag tag-pill tag-secondary">Secondary</span>
 <span class="tag tag-pill tag-success">Success</span>
 <span class="tag tag-pill tag-info">Info</span>
 <span class="tag tag-pill tag-warning">Warning</span>
 <span class="tag tag-pill tag-danger">Danger</span>
 
-<h3>Tags anchors</h3>
-<a href="#" class="tag">Default</a>
-<a href="#"  class="tag tag-primary">Primary</a>
-<a href="#"  class="tag tag-success">Success</a>
-<a href="#"  class="tag tag-info">Info</a>
-<a href="#"  class="tag tag-warning">Warning</a>
-<a href="#"  class="tag tag-danger">Danger</a>
+<h3>Tags outline</h3>
+<span class="tag tag-outline">Default</span>
+<span class="tag tag-outline-primary">Primary</span>
+<span class="tag tag-outline-secondary">Secondary</span>
+<span class="tag tag-outline-success">Success</span>
+<span class="tag tag-outline-info">Info</span>
+<span class="tag tag-outline-warning">Warning</span>
+<span class="tag tag-outline-danger">Danger</span>
+
+<h3>Tags outline anchors</h3>
+<a href="#" class="tag tag-outline">Default</a>
+<a href="#"  class="tag tag-outline-primary">Primary</a>
+<a href="#"  class="tag tag-outline-secondary">Secondary</a>
+<a href="#"  class="tag tag-outline-success">Success</a>
+<a href="#"  class="tag tag-outline-info">Info</a>
+<a href="#"  class="tag tag-outline-warning">Warning</a>
+<a href="#"  class="tag tag-outline-danger">Danger</a>
+
 
 <h3>Alerts</h3>
 <div class="alert alert-primary" role="alert">
