--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -61,6 +61,13 @@ Holder.addTheme("gray", {
     position: static;
     margin: 1rem -1.5rem -1.5rem;
 }
+.icon-menu {
+    display: inline-block;
+    margin-top: -.25rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: .75;
+}
 .close-sample .close {
     float: none;
 }
@@ -2831,19 +2838,19 @@ Anchor variants:<br />
   </div>
 </div>
 <nav class="navbar navbar-light bg-faded">
-  <button class="navbar-toggler" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#exCollapsingNavbar1">
-    &#9776;
+  <button class="navbar-toggler" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#exCollapsingNavbar1" aria-label="Toggle navigation">
+    <span class="icon-menu" aria-hidden="true">&#8801;</span>
   </button>
 </nav>
 
 <h3>Responsive navbar</h3>
 <small>resize screen below 'md' breakpoint</small><br />
 <nav class="navbar navbar-light bg-faded">
-  <button class="navbar-toggler hidden-md-up" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#exCollapsingNavbar2">
-    &#9776;
+  <a class="navbar-brand" href="#">Responsive navbar</a>
+  <button class="navbar-toggler hidden-lg-up pull-xs-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#exCollapsingNavbar2" aria-label="Toggle navigation">
+    <span class="icon-menu" aria-hidden="true">&#8801;</span>
   </button>
-  <div class="collapse navbar-toggleable-sm" id="exCollapsingNavbar2">
-    <a class="navbar-brand" href="#">Responsive navbar</a>
+  <div class="collapse navbar-toggleable-md" id="exCollapsingNavbar2">
     <ul class="nav navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
