--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1082,6 +1082,13 @@ Showing a <kbd>kdb sample</kbd>
           </label>
         </div>
       </div>
+      <div class="form-group row">
+        <div class="col-sm-2">Criteria 5:
+        </div>
+        <div class="col-sm-10">
+          <label class="form-check-inline disabled"><input class="form-check-input" type="checkbox" id="inputCriteria3" name="checkCriteria2" value="yes" disabled> Yes, I <em>really</em> want it!</label>
+        </div>
+      </div>
     </div>
   </div>
 </div>
