--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -854,20 +854,20 @@ Showing a <kbd>kdb sample</kbd>
     <small class="text-muted">This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a new line.</small>
   </fieldset>
   <div class="form-check">
-    <label class=form-check-label">
-      <input type="radio" class=form-check-input" name="optionsRadios" id="optionsRadios1" value="option1" checked="" />
+    <label class="form-check-label">
+      <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1" checked="" />
       Option one is this and that&mdash;be sure to include why it's great
     </label>
   </div>
   <div class="form-check">
-    <label class=form-check-label">
-      <input type="radio" class=form-check-input"  name="optionsRadios" id="optionsRadios2" value="option2" />
+    <label class="form-check-label">
+      <input type="radio" class="form-check-input"  name="optionsRadios" id="optionsRadios2" value="option2" />
       Option two can be something else and selecting it will deselect option one
     </label>
   </div>
   <div class="form-check disabled">
     <label class="form-check-label">
-      <input type="radio" class=form-check-input" name="optionsRadios" id="optionsRadios3" value="option3" disabled="" />
+      <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios3" value="option3" disabled="" />
       Option three is disabled
     </label>
   </div>
@@ -1005,7 +1005,7 @@ Showing a <kbd>kdb sample</kbd>
 
 <div class="form-check">
   <label class="form-check-label">
-    <input type="radio" class=""form-check-input" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+    <input type="radio" class="form-check-input" name="exampleRadios" id="exampleRadios1" value="option1" checked>
     Option one is this and that&mdash;be sure to include why it's great
   </label>
 </div>
@@ -1050,21 +1050,21 @@ Showing a <kbd>kdb sample</kbd>
         <div class="col-sm-2">Criteria 1:
         </div>
         <div class="col-sm-10">
-          <label class="form-check-inline"><input class="form-check-input" type="checkbox" id="inputCriteria1" name="checkCriteria1" value="yes"> Yes, I want!</label>
+          <label class="form-check-inline"><input class="form-check-input" type="checkbox" value="yes"> Yes, I want!</label>
         </div>
       </div>
       <div class="form-group row">
         <div class="col-sm-2">Criteria 2:
         </div>
         <div class="col-sm-10">
-          <label class="form-check-inline"><input class="form-check-input" type="checkbox" id="inputCriteria2" name="checkCriteria2" value="yes"> Yes, it's me: <a href="mailto:john@doe.com">john@doe.com</a></label>
+          <label class="form-check-inline"><input class="form-check-input" type="checkbox" value="yes"> Yes, it's me: <a href="mailto:john@doe.com">john@doe.com</a></label>
         </div>
       </div>
       <div class="form-group row">
         <div class="col-sm-2">Criteria 3:
         </div>
         <div class="col-sm-10">
-          <label class="form-check-inline"><input class="form-check-input" type="checkbox" id="inputCriteria3" name="checkCriteria2" value="yes"> Yes, I <em>really</em> want it!</label>
+          <label class="form-check-inline"><input class="form-check-input" type="checkbox" value="yes"> Yes, I <em>really</em> want it!</label>
         </div>
       </div>
       <div class="form-group row">
@@ -1072,13 +1072,13 @@ Showing a <kbd>kdb sample</kbd>
         </div>
         <div class="col-sm-10">
           <label class="form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1"> 1
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox4-1" value="option1"> 1
           </label>
           <label class="form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2"> 2<em>italic</em>
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox4-2" value="option2"> 2<em>italic</em>
           </label>
           <label class="form-check-inline">
-            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3"> 3
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox4-3" value="option3"> 3
           </label>
         </div>
       </div>
@@ -1086,7 +1086,7 @@ Showing a <kbd>kdb sample</kbd>
         <div class="col-sm-2">Criteria 5:
         </div>
         <div class="col-sm-10">
-          <label class="form-check-inline disabled"><input class="form-check-input" type="checkbox" id="inputCriteria3" name="checkCriteria2" value="yes" disabled> Yes, I <em>really</em> want it!</label>
+          <label class="form-check-inline disabled"><input class="form-check-input" type="checkbox" value="yes" disabled> Yes, I <em>really</em> want it!</label>
         </div>
       </div>
     </div>
@@ -1238,7 +1238,7 @@ Showing a <kbd>kdb sample</kbd>
       </div>
       <fieldset class="form-group col-md-5">
         <label for="formGroupExampleInput5" class="sr-only">Example label</label>
-        <input type="text" class="form-control form-control-lg" id="Formgroupexampleinput5" placeholder="Example input">
+        <input type="text" class="form-control form-control-lg" id="formGroupExampleInput5" placeholder="Example input">
       </fieldset>
       <fieldset class="form-group col-md-5">
         <label for="exampleSelect5" class="sr-only">Example select</label>
@@ -1257,7 +1257,7 @@ Showing a <kbd>kdb sample</kbd>
       </div>
       <fieldset class="form-group col-md-5">
         <label for="formGroupExampleInput6" class="sr-only">Example label</label>
-        <input type="text" class="form-control form-control-xl" id="Formgroupexampleinput6" placeholder="Example input">
+        <input type="text" class="form-control form-control-xl" id="formGroupExampleInput6" placeholder="Example input">
       </fieldset>
       <fieldset class="form-group col-md-5">
         <label for="exampleSelect6" class="sr-only">Example select</label>
@@ -1371,7 +1371,7 @@ Showing a <kbd>kdb sample</kbd>
     <span class="custom-control-description">Check this custom checkbox</span>
   </label>
   <label class="custom-control custom-radio">
-    <input id="radio3" name="radioDisabled" type="radio" class="custom-control-input" disabled>
+    <input id="radioDisabled0" name="radioDisabled" type="radio" class="custom-control-input" disabled>
     <span class="custom-control-indicator"></span>
     <span class="custom-control-description">Toggle this custom radio</span>
   </label>
@@ -1381,7 +1381,7 @@ Showing a <kbd>kdb sample</kbd>
     <span class="custom-control-description">Check this custom checkbox</span>
   </label>
   <label class="custom-control custom-radio">
-    <input id="radio3" name="radioDisabled" type="radio" class="custom-control-input" disabled>
+    <input id="radioDisabled1" name="radioDisabled" type="radio" class="custom-control-input" disabled>
     <span class="custom-control-indicator"></span>
     <span class="custom-control-description">Toggle this custom radio</span>
   </label>
@@ -1391,7 +1391,7 @@ Showing a <kbd>kdb sample</kbd>
     <span class="custom-control-description">Check this custom checkbox</span>
   </label>
   <label class="custom-control custom-radio">
-    <input id="radio3" name="radioDisabled" type="radio" class="custom-control-input" disabled>
+    <input id="radioDisabled2" name="radioDisabled" type="radio" class="custom-control-input" disabled>
     <span class="custom-control-indicator"></span>
     <span class="custom-control-description">Toggle this custom radio</span>
   </label>
