Remove bottom margin from .btn in .btn-group

--- a/test/visual/flexbox-button.html
+++ b/test/visual/flexbox-button.html
@@ -193,6 +193,35 @@ Holder.addTheme("gray", {
         </div>
     </div>
 
+    <hr />
+
+    normal:
+    <div class="btn-group-vertical" data-cfw="buttons" role="group">
+        <label class="btn btn-info">
+            <input type="checkbox" /> One
+        </label>
+        <label class="btn btn-info">
+            <input type="checkbox" /> Two
+        </label>
+        <label class="btn btn-info">
+            <input type="checkbox" /> Three
+        </label>
+    </div>
+
+    flex:
+    <div class="btn-group-vertical btn-group-vertical-flex" data-cfw="buttons" role="group">
+        <label class="btn btn-info">
+            <input type="checkbox" /> One
+        </label>
+        <label class="btn btn-info">
+            <input type="checkbox" /> Two
+        </label>
+        <label class="btn btn-info">
+            <input type="checkbox" /> Three
+        </label>
+    </div>
+
+</div>
 
 </div>
 
