Fix layout for collapsing table

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -803,6 +803,29 @@ Showing a <kbd>kdb sample</kbd>
   </table>
 </div>
 
+<h3>Collapsing Table:</h3>
+<table class="table">
+    <thead>
+    <tr>
+        <th>column 1</th>
+        <th>Column 2</th>
+        <th>Column 3</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr data-cfw="collapse" href="#row-1">
+        <td>Click</td>
+        <td>this</td>
+        <td>row</td>
+    </tr>
+    <tr class="collapse" id="row-1">
+        <td>Hidden</td>
+        <td>Hidden</td>
+        <td>Hidden</td>
+    </tr>
+    </tbody>
+</table>
+
 <h3>Default Form</h3>
 <form>
     <fieldset>
