--- a/about/team/index.html
+++ b/about/team/index.html
@@ -27,7 +27,7 @@
   <link href="/assets/css/docs.min.css" rel="stylesheet">
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" integrity="sha384-nrOSfDHtoPMzJHjVTdCopGqIqeYETSXhZDFyniQ8ZHcVy08QesyHcnOUpMpqnmWq" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery.min.js"><\/script>')</script>
 
 <!-- Core JS -->
@@ -210,7 +210,7 @@
     <div class="list-group-item">
       <iframe class="github-btn" src="https://ghbtns.com/github-btn.html?user=mbrambilla&amp;type=follow"></iframe>
       <a class="team-member" href="https://github.com/mbrambilla">
-
+        <img src="https://secure.gravatar.com/avatar/d0613afbddc2a5fe935d693e7f3b893e" alt="@mbrambilla" width="32" height="32" />
         <strong>Matthew Brambilla</strong> <small>@mbrambilla</small>
       </a>
     </div>
@@ -230,7 +230,7 @@
     <footer class="cf-footer">
     <div class="container">
         <p>
-            Currently version: 1.2.0
+            Currently version: 1.3.0
             <br />
             <a href="https://github.com/cast-org/figuration">GitHub Project</a> - <a href="https://github.com/cast-org/figuration/issues">Issues</a>
         </p>
