--- a/content/tables/index.html
+++ b/content/tables/index.html
@@ -27,7 +27,7 @@
   <link href="/assets/css/docs.min.css" rel="stylesheet">
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" integrity="sha384-nrOSfDHtoPMzJHjVTdCopGqIqeYETSXhZDFyniQ8ZHcVy08QesyHcnOUpMpqnmWq" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery.min.js"><\/script>')</script>
 
 <!-- Core JS -->
@@ -292,7 +292,7 @@
 
 <h2 id="examples">Examples</h2>
 
-<p>Using the most basic table markup, here’s how <code class="highlighter-rouge">.table</code>-based tables look in Figuration.</p>
+<p>Using the most basic table markup, here’s how <code class="highlighter-rouge">.table</code>-based tables look in Figuration. All table styles are inherited, meaning any nested tables will be styled in the same manner as the parent.</p>
 
 <div class="cf-example" data-example-id="">
 <table class="table">
@@ -1402,7 +1402,7 @@
     <footer class="cf-footer">
     <div class="container">
         <p>
-            Currently version: 1.2.0
+            Currently version: 1.3.0
             <br />
             <a href="https://github.com/cast-org/figuration">GitHub Project</a> - <a href="https://github.com/cast-org/figuration/issues">Issues</a>
         </p>
