Input Group: fix alignment and sizing of addons

--- a/test/visual/flexbox-input.html
+++ b/test/visual/flexbox-input.html
@@ -251,6 +251,40 @@ flex:
   </span>
 </div>
 
+<hr />
+
+normal:
+<div class="input-group">
+    <div class="input-group-addon">%</div>
+    <textarea class="form-control" rows="5"></textarea>
+</div>
+
+flex:
+<div class="input-group input-group-flex">
+    <div class="input-group-addon">%</div>
+    <textarea class="form-control" rows="5"></textarea>
+</div>
+
+<hr />
+
+<strong>Not supported:</strong> - buttons w/ textareas<br />
+
+normal:
+<div class="input-group">
+    <textarea class="form-control" rows="5"></textarea>
+    <span class="input-group-btn">
+        <button class="btn" type="button">Go!</button>
+    </span>
+</div>
+
+flex:
+<div class="input-group input-group-flex">
+    <textarea class="form-control" rows="5"></textarea>
+    <span class="input-group-btn">
+        <button class="btn" type="button">Go!</button>
+    </span>
+</div>
+
 </div></div></div>
 
 </body>
