--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1341,6 +1341,31 @@ Showing a <kbd>kdb sample</kbd>
   </label>
 </div>
 
+<div class="form-group row has-success">
+  <label for="inputHorizontalSuccess" class="col-sm-2 form-control-label">Email</label>
+  <div class="col-sm-10">
+    <input type="email" class="form-control form-control-success" id="inputHorizontalSuccess" placeholder="name@example.com">
+    <div class="form-control-feedback">Success! You've done it.</div>
+    <small class="form-text text-muted">Example help text that remains unchanged.</small>
+  </div>
+</div>
+<div class="form-group row has-warning">
+  <label for="inputHorizontalWarning" class="col-sm-2 form-control-label">Email</label>
+  <div class="col-sm-10">
+    <input type="email" class="form-control form-control-warning" id="inputHorizontalWarning" placeholder="name@example.com">
+    <div class="form-control-feedback">Shucks, check the formatting of that and try again.</div>
+    <small class="form-text text-muted">Example help text that remains unchanged.</small>
+  </div>
+</div>
+<div class="form-group row has-danger">
+  <label for="inputHorizontalDnger" class="col-sm-2 form-control-label">Email</label>
+  <div class="col-sm-10">
+    <input type="email" class="form-control form-control-danger" id="inputHorizontalDnger" placeholder="name@example.com">
+    <div class="form-control-feedback">Sorry, that username's taken. Try another?</div>
+    <small class="form-text text-muted">Example help text that remains unchanged.</small>
+  </div>
+</div>
+
 <h3>Form validation - native for reference (colors not Figuration controlled)</h3>
 <div class="form-group">
   <label class="form-control-label" for="inputNative0">Name</label>
