Added note in source about card column layout issue for future reference

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -3649,6 +3649,19 @@ Anchor variants:<br />
   </div>
 </div>
 
+<h3>Card columns - short count</h3>
+<div class="card-columns">
+  <div class="card card-block">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
+  </div>
+  <div class="card card-block">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
+  </div>
+  <div class="card card-block">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
+  </div>
+</div>
+
 
 <h3>Card - heading nav</h3>
 <div class="card text-xs-center">
