v2 - Utilities-Float: rename and responsive rework
Rename `.pull-*-left` and `.pull-*-right` utilities to `.float-*-left` and `.float-*-right` and implement the new breakpoint designator.

Additional `float-none()` mixin.

Update docs and tests with class name changes

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1687,15 +1687,15 @@ Anchor variants:<br />
 <h3>List group with labels</h3>
 <ul class="list-group">
   <li class="list-group-item">
-    <span class="tag tag-pill pull-xs-right">14</span>
+    <span class="tag tag-pill float-right">14</span>
     Cras justo odio
   </li>
   <li class="list-group-item">
-    <span class="tag tag-pill pull-xs-right">2</span>
+    <span class="tag tag-pill float-right">2</span>
     Dapibus ac facilisis in
   </li>
   <li class="list-group-item">
-    <span class="tag tag-pill pull-xs-right">1</span>
+    <span class="tag tag-pill float-right">1</span>
     Morbi leo risus
   </li>
 </ul>
@@ -2796,7 +2796,7 @@ Anchor variants:<br />
       <a class="nav-link disabled" href="#">Disabled</a>
     </li>
   </ul>
-  <form class="form-inline pull-xs-right">
+  <form class="form-inline float-right">
     <input class="form-control" type="text" placeholder="Search">
     <button class="btn btn-outline-primary" type="submit">Search</button>
   </form>
@@ -2818,7 +2818,7 @@ Anchor variants:<br />
       <a class="nav-link disabled" href="#">Disabled</a>
     </li>
   </ul>
-  <form class="form-inline pull-xs-right">
+  <form class="form-inline float-right">
     <input class="form-control" type="text" placeholder="Search">
     <button class="btn" type="submit">Search</button>
   </form>
@@ -2840,7 +2840,7 @@ Anchor variants:<br />
       <a class="nav-link disabled" href="#">Disabled</a>
     </li>
   </ul>
-  <form class="form-inline pull-xs-right">
+  <form class="form-inline float-right">
     <input class="form-control" type="text" placeholder="Search">
     <button class="btn" type="submit">Search</button>
   </form>
@@ -2862,7 +2862,7 @@ Anchor variants:<br />
       <a class="nav-link disabled" href="#">Disabled</a>
     </li>
   </ul>
-  <form class="form-inline pull-xs-right">
+  <form class="form-inline float-right">
     <input class="form-control" type="text" placeholder="Search">
     <button class="btn btn-outline-primary" type="submit">Search</button>
   </form>
@@ -2902,7 +2902,7 @@ Anchor variants:<br />
 <small>resize screen below 'md' breakpoint</small><br />
 <nav class="navbar navbar-light bg-faded">
   <a class="navbar-brand" href="#">Responsive navbar</a>
-  <button class="navbar-toggler hidden-lg-up pull-xs-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#exCollapsingNavbar2" aria-label="Toggle navigation">
+  <button class="navbar-toggler hidden-lg-up float-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#exCollapsingNavbar2" aria-label="Toggle navigation">
     <span class="icon-menu" aria-hidden="true">&#8801;</span>
   </button>
   <div class="collapse navbar-toggleable-md" id="exCollapsingNavbar2">
@@ -3666,7 +3666,7 @@ Anchor variants:<br />
 <h3>Card - heading nav</h3>
 <div class="card text-xs-center">
   <div class="card-header">
-    <ul class="nav nav-tabs card-header-tabs pull-xs-left">
+    <ul class="nav nav-tabs card-header-tabs float-left">
       <li class="nav-item">
         <a class="nav-link active" href="#">Active</a>
       </li>
@@ -3687,7 +3687,7 @@ Anchor variants:<br />
 
 <div class="card text-xs-center">
   <div class="card-header">
-    <ul class="nav nav-pills card-header-pills pull-xs-left">
+    <ul class="nav nav-pills card-header-pills float-left">
       <li class="nav-item">
         <a class="nav-link active" href="#">Active</a>
       </li>
