--- a/test/visual/flexbox-list-group.html
+++ b/test/visual/flexbox-list-group.html
@@ -64,15 +64,15 @@ flex:
 normal:
 <ul class="list-group">
   <li class="list-group-item">
-    <span class="tag tag-default tag-pill pull-xs-right">14</span>
+    <span class="tag tag-default tag-pill float-right">14</span>
     Cras justo odio
   </li>
   <li class="list-group-item">
-    <span class="tag tag-default tag-pill pull-xs-right">2</span>
+    <span class="tag tag-default tag-pill float-right">2</span>
     Dapibus ac facilisis in
   </li>
   <li class="list-group-item">
-    <span class="tag tag-default tag-pill pull-xs-right">1</span>
+    <span class="tag tag-default tag-pill float-right">1</span>
     Morbi leo risus
   </li>
 </ul>
