v2- Fix flex classnames that were missed during rework

--- a/test/visual/flexbox-grid.html
+++ b/test/visual/flexbox-grid.html
@@ -407,7 +407,7 @@
 
     <h2>Vertical Flex Alignment</h2>
 
-    <div class="row row-flex flex-xs-top">
+    <div class="row row-flex flex-top">
         <div class="col-xs">
             <code>.flex-*-top</code>
         </div>
@@ -419,7 +419,7 @@
         </div>
     </div>
 
-    <div class="row row-flex flex-xs-middle">
+    <div class="row row-flex flex-middle">
         <div class="col-xs">
             <code>.flex-*-middle</code>
         </div>
@@ -431,7 +431,7 @@
         </div>
     </div>
 
-    <div class="row row-flex flex-xs-bottom">
+    <div class="row row-flex flex-bottom">
         <div class="col-xs">
             <code>.flex-*-bottom</code>
         </div>
@@ -443,7 +443,7 @@
         </div>
     </div>
 
-    <div class="row row-flex flex-xs-stretch">
+    <div class="row row-flex flex-stretch">
         <div class="col-xs">
             <code>.flex-*-stretch</code>
         </div>
@@ -472,7 +472,7 @@
 
     <h2>Horizontal Flex Alignment</h2>
 
-    <div class="row row-flex flex-xs-left">
+    <div class="row row-flex flex-left">
         <div class="col-xs-4">
             aligned to
         </div>
@@ -481,7 +481,7 @@
         </div>
     </div>
 
-    <div class="row row-flex flex-xs-center">
+    <div class="row row-flex flex-center">
         <div class="col-xs-4">
             aligned to
         </div>
@@ -490,7 +490,7 @@
         </div>
     </div>
 
-    <div class="row row-flex flex-xs-right">
+    <div class="row row-flex flex-right">
         <div class="col-xs-4">
             aligned to
         </div>
@@ -499,7 +499,7 @@
         </div>
     </div>
 
-    <div class="row row-flex flex-xs-around">
+    <div class="row row-flex flex-around">
         <div class="col-xs-4">
             aliged to
         </div>
@@ -508,7 +508,7 @@
         </div>
     </div>
 
-    <div class="row row-flex flex-xs-between">
+    <div class="row row-flex flex-between">
         <div class="col-xs-4">
             aligned to
         </div>
