--- a/test/visual/flexbox-list-group.html
+++ b/test/visual/flexbox-list-group.html
@@ -79,15 +79,15 @@ normal:
 
 flex:
 <ul class="list-group list-group-flex">
-  <li class="list-group-item flex-xs-between">
+  <li class="list-group-item flex-between">
     Cras justo odio
     <span class="tag tag-default tag-pill">14</span>
   </li>
-  <li class="list-group-item flex-xs-between">
+  <li class="list-group-item flex-between">
     Dapibus ac facilisis in
     <span class="tag tag-default tag-pill">2</span>
   </li>
-  <li class="list-group-item flex-xs-between">
+  <li class="list-group-item flex-between">
     Morbi leo risus
     <span class="tag tag-default tag-pill">1</span>
   </li>
