v2 - more utilities docs
Fix some incorrect classes in styles test too,

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -428,7 +428,7 @@ Showing a <kbd>kdb sample</kbd>
 
 <figure class="figure">
   <img data-src="holder.js/300x200" class="figure-img img-responsive img-rounded" alt="A square placeholder image with rounded corners in a figure.">
-  <figcaption class="figure-caption text-xs-right">A caption for the above image.</figcaption>
+  <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
 </figure>
 
 <figure class="figure">
@@ -3280,13 +3280,13 @@ Anchor variants:<br />
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
 
-    <div class="card card-block text-xs-center">
+    <div class="card card-block text-center">
       <h4 class="card-title">Special title treatment</h4>
       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
 
-    <div class="card card-block text-xs-right">
+    <div class="card card-block text-right">
       <h4 class="card-title">Special title treatment</h4>
       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -3327,7 +3327,7 @@ Anchor variants:<br />
       </div>
     </div>
 
-    <div class="card text-xs-center">
+    <div class="card text-center">
       <div class="card-header">
         Featured
       </div>
@@ -3378,7 +3378,7 @@ Anchor variants:<br />
     </div>
 
     <h3>Card - context variants</h3>
-    <div class="card card-inverse card-primary text-xs-center">
+    <div class="card card-inverse card-primary text-center">
       <div class="card-block">
         <blockquote class="card-blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
@@ -3386,7 +3386,7 @@ Anchor variants:<br />
         </blockquote>
       </div>
     </div>
-    <div class="card card-inverse card-secondary text-xs-center">
+    <div class="card card-inverse card-secondary text-center">
       <div class="card-block">
         <blockquote class="card-blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
@@ -3394,7 +3394,7 @@ Anchor variants:<br />
         </blockquote>
       </div>
     </div>
-    <div class="card card-inverse card-success text-xs-center">
+    <div class="card card-inverse card-success text-center">
       <div class="card-block">
         <blockquote class="card-blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
@@ -3402,7 +3402,7 @@ Anchor variants:<br />
         </blockquote>
       </div>
     </div>
-    <div class="card card-inverse card-info text-xs-center">
+    <div class="card card-inverse card-info text-center">
       <div class="card-block">
         <blockquote class="card-blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
@@ -3410,7 +3410,7 @@ Anchor variants:<br />
         </blockquote>
       </div>
     </div>
-    <div class="card card-inverse card-warning text-xs-center">
+    <div class="card card-inverse card-warning text-center">
       <div class="card-block">
         <blockquote class="card-blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
@@ -3418,7 +3418,7 @@ Anchor variants:<br />
         </blockquote>
       </div>
     </div>
-    <div class="card card-inverse card-danger text-xs-center">
+    <div class="card card-inverse card-danger text-center">
       <div class="card-block">
         <blockquote class="card-blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
@@ -3428,7 +3428,7 @@ Anchor variants:<br />
     </div>
 
     <h3>Card - outline variants</h3>
-    <div class="card card-outline-primary text-xs-center">
+    <div class="card card-outline-primary text-center">
       <div class="card-block">
         <blockquote class="card-blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
@@ -3436,7 +3436,7 @@ Anchor variants:<br />
         </blockquote>
       </div>
     </div>
-    <div class="card card-outline-secondary text-xs-center">
+    <div class="card card-outline-secondary text-center">
       <div class="card-block">
         <blockquote class="card-blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
@@ -3444,7 +3444,7 @@ Anchor variants:<br />
         </blockquote>
       </div>
     </div>
-    <div class="card card-outline-success text-xs-center">
+    <div class="card card-outline-success text-center">
       <div class="card-block">
         <blockquote class="card-blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
@@ -3452,7 +3452,7 @@ Anchor variants:<br />
         </blockquote>
       </div>
     </div>
-    <div class="card card-outline-info text-xs-center">
+    <div class="card card-outline-info text-center">
       <div class="card-block">
         <blockquote class="card-blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
@@ -3460,7 +3460,7 @@ Anchor variants:<br />
         </blockquote>
       </div>
     </div>
-    <div class="card card-outline-warning text-xs-center">
+    <div class="card card-outline-warning text-center">
       <div class="card-block">
         <blockquote class="card-blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
@@ -3468,7 +3468,7 @@ Anchor variants:<br />
         </blockquote>
       </div>
     </div>
-    <div class="card card-outline-danger text-xs-center">
+    <div class="card card-outline-danger text-center">
       <div class="card-block">
         <blockquote class="card-blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
@@ -3614,7 +3614,7 @@ Anchor variants:<br />
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
-  <div class="card card-block card-inverse card-primary text-xs-center">
+  <div class="card card-block card-inverse card-primary text-center">
     <blockquote class="card-blockquote">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
       <footer>
@@ -3624,7 +3624,7 @@ Anchor variants:<br />
       </footer>
     </blockquote>
   </div>
-  <div class="card card-block text-xs-center">
+  <div class="card card-block text-center">
     <h4 class="card-title">Card title</h4>
     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -3632,7 +3632,7 @@ Anchor variants:<br />
   <div class="card">
     <img class="card-img img-responsive" data-src="holder.js/100px200" alt="Card image" />
   </div>
-  <div class="card card-block text-xs-right">
+  <div class="card card-block text-right">
     <blockquote class="card-blockquote">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
       <footer>
@@ -3664,7 +3664,7 @@ Anchor variants:<br />
 
 
 <h3>Card - heading nav</h3>
-<div class="card text-xs-center">
+<div class="card text-center">
   <div class="card-header">
     <ul class="nav nav-tabs card-header-tabs float-left">
       <li class="nav-item">
@@ -3685,7 +3685,7 @@ Anchor variants:<br />
   </div>
 </div>
 
-<div class="card text-xs-center">
+<div class="card text-center">
   <div class="card-header">
     <ul class="nav nav-pills card-header-pills float-left">
       <li class="nav-item">
